--- a/SpaceMissionsAnalysis.ipynb
+++ b/SpaceMissionsAnalysis.ipynb
@@ -71,10 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting iso3166\r\n",
-      "  Downloading iso3166-2.1.1-py3-none-any.whl (9.8 kB)\r\n",
-      "Installing collected packages: iso3166\r\n",
-      "Successfully installed iso3166-2.1.1\r\n",
+      "Requirement already satisfied: iso3166 in /Users/felixschwebel/opt/anaconda3/lib/python3.9/site-packages (2.1.1)\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -146,7 +143,7 @@
    "source": [
     "pd.options.display.float_format = '{:,.2f}'.format"
    ],
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": []
   },
   {
@@ -191,7 +188,7 @@
    "source": [
     "df_data = pd.read_csv('mission_launches.csv')"
    ],
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": []
   },
   {
@@ -200,13 +197,17 @@
     "id": "jAnMiVcVjuKB"
    },
    "source": [
-    "# Preliminary Data Exploration\n",
-    "\n",
-    "* What is the shape of `df_data`? \n",
-    "* How many rows and columns does it have?\n",
-    "* What are the column names?\n",
-    "* Are there any NaN values or duplicates?"
+    "## Preliminary Data Exploration"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Shape of the dataframe:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -214,28 +215,64 @@
     "id": "0tIuYcYNlPFQ"
    },
    "source": [
-    "df_data.shape"
+    "shape = df_data.shape\n",
+    "print(f\"rows: {shape[0]}\")\n",
+    "print(f\"columns: {shape[1]}\")"
    ],
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
-     "data": {
-      "text/plain": "(4324, 9)"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows: 4324\n",
+      "columns: 9\n"
+     ]
     }
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Columns of the dataframe:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "0dw2hd9UlPmP"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "df_data.info()"
+   ],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4324 entries, 0 to 4323\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   Unnamed: 0.1    4324 non-null   int64 \n",
+      " 1   Unnamed: 0      4324 non-null   int64 \n",
+      " 2   Organisation    4324 non-null   object\n",
+      " 3   Location        4324 non-null   object\n",
+      " 4   Date            4324 non-null   object\n",
+      " 5   Detail          4324 non-null   object\n",
+      " 6   Rocket_Status   4324 non-null   object\n",
+      " 7   Price           964 non-null    object\n",
+      " 8   Mission_Status  4324 non-null   object\n",
+      "dtypes: int64(2), object(7)\n",
+      "memory usage: 304.2+ KB\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,18 +296,180 @@
    "metadata": {
     "id": "wWQvnJb0k2Ig"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "print(df_data.head())\n",
+    "print(df_data.tail())"
+   ],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0.1  Unnamed: 0 Organisation  \\\n",
+      "0             0           0       SpaceX   \n",
+      "1             1           1         CASC   \n",
+      "2             2           2       SpaceX   \n",
+      "3             3           3    Roscosmos   \n",
+      "4             4           4          ULA   \n",
+      "\n",
+      "                                            Location  \\\n",
+      "0         LC-39A, Kennedy Space Center, Florida, USA   \n",
+      "1  Site 9401 (SLS-2), Jiuquan Satellite Launch Ce...   \n",
+      "2                      Pad A, Boca Chica, Texas, USA   \n",
+      "3       Site 200/39, Baikonur Cosmodrome, Kazakhstan   \n",
+      "4           SLC-41, Cape Canaveral AFS, Florida, USA   \n",
+      "\n",
+      "                         Date                                        Detail  \\\n",
+      "0  Fri Aug 07, 2020 05:12 UTC  Falcon 9 Block 5 | Starlink V1 L9 & BlackSky   \n",
+      "1  Thu Aug 06, 2020 04:01 UTC           Long March 2D | Gaofen-9 04 & Q-SAT   \n",
+      "2  Tue Aug 04, 2020 23:57 UTC            Starship Prototype | 150 Meter Hop   \n",
+      "3  Thu Jul 30, 2020 21:25 UTC  Proton-M/Briz-M | Ekspress-80 & Ekspress-103   \n",
+      "4  Thu Jul 30, 2020 11:50 UTC                    Atlas V 541 | Perseverance   \n",
+      "\n",
+      "  Rocket_Status  Price Mission_Status  \n",
+      "0  StatusActive   50.0        Success  \n",
+      "1  StatusActive  29.75        Success  \n",
+      "2  StatusActive    NaN        Success  \n",
+      "3  StatusActive   65.0        Success  \n",
+      "4  StatusActive  145.0        Success  \n",
+      "      Unnamed: 0.1  Unnamed: 0 Organisation  \\\n",
+      "4319          4319        4319      US Navy   \n",
+      "4320          4320        4320         AMBA   \n",
+      "4321          4321        4321      US Navy   \n",
+      "4322          4322        4322    RVSN USSR   \n",
+      "4323          4323        4323    RVSN USSR   \n",
+      "\n",
+      "                                       Location                        Date  \\\n",
+      "4319   LC-18A, Cape Canaveral AFS, Florida, USA  Wed Feb 05, 1958 07:33 UTC   \n",
+      "4320   LC-26A, Cape Canaveral AFS, Florida, USA  Sat Feb 01, 1958 03:48 UTC   \n",
+      "4321   LC-18A, Cape Canaveral AFS, Florida, USA  Fri Dec 06, 1957 16:44 UTC   \n",
+      "4322  Site 1/5, Baikonur Cosmodrome, Kazakhstan  Sun Nov 03, 1957 02:30 UTC   \n",
+      "4323  Site 1/5, Baikonur Cosmodrome, Kazakhstan  Fri Oct 04, 1957 19:28 UTC   \n",
+      "\n",
+      "                          Detail  Rocket_Status Price Mission_Status  \n",
+      "4319   Vanguard | Vanguard TV3BU  StatusRetired   NaN        Failure  \n",
+      "4320         Juno I | Explorer 1  StatusRetired   NaN        Success  \n",
+      "4321     Vanguard | Vanguard TV3  StatusRetired   NaN        Failure  \n",
+      "4322  Sputnik 8K71PS | Sputnik-2  StatusRetired   NaN        Success  \n",
+      "4323  Sputnik 8K71PS | Sputnik-1  StatusRetired   NaN        Success  \n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "SfxVooCYk2As"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "print(f\"mssing values: {df_data.isna().values.any()}\")\n",
+    "print(f\"duplicates: {df_data.duplicated().values.any()}\")"
+   ],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "missing values: True\n",
+      "duplicates: False\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of missing values: Unnamed: 0.1  Unnamed: 0  Organisation  Location  Date   Detail  Rocket_Status  Price  Mission_Status\n",
+      "False         False       False         False     False  False   False          True   False             3360\n",
+      "                                                                                False  False              964\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of missing values: {df_data.isna().value_counts()}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Cleaned dataframe:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0.1  Unnamed: 0 Organisation  \\\n",
+      "0             0           0       SpaceX   \n",
+      "1             1           1         CASC   \n",
+      "3             3           3    Roscosmos   \n",
+      "4             4           4          ULA   \n",
+      "5             5           5         CASC   \n",
+      "\n",
+      "                                            Location  \\\n",
+      "0         LC-39A, Kennedy Space Center, Florida, USA   \n",
+      "1  Site 9401 (SLS-2), Jiuquan Satellite Launch Ce...   \n",
+      "3       Site 200/39, Baikonur Cosmodrome, Kazakhstan   \n",
+      "4           SLC-41, Cape Canaveral AFS, Florida, USA   \n",
+      "5       LC-9, Taiyuan Satellite Launch Center, China   \n",
+      "\n",
+      "                         Date  \\\n",
+      "0  Fri Aug 07, 2020 05:12 UTC   \n",
+      "1  Thu Aug 06, 2020 04:01 UTC   \n",
+      "3  Thu Jul 30, 2020 21:25 UTC   \n",
+      "4  Thu Jul 30, 2020 11:50 UTC   \n",
+      "5  Sat Jul 25, 2020 03:13 UTC   \n",
+      "\n",
+      "                                              Detail Rocket_Status  Price  \\\n",
+      "0       Falcon 9 Block 5 | Starlink V1 L9 & BlackSky  StatusActive   50.0   \n",
+      "1                Long March 2D | Gaofen-9 04 & Q-SAT  StatusActive  29.75   \n",
+      "3       Proton-M/Briz-M | Ekspress-80 & Ekspress-103  StatusActive   65.0   \n",
+      "4                         Atlas V 541 | Perseverance  StatusActive  145.0   \n",
+      "5  Long March 4B | Ziyuan-3 03, Apocalypse-10 & N...  StatusActive  64.68   \n",
+      "\n",
+      "  Mission_Status  \n",
+      "0        Success  \n",
+      "1        Success  \n",
+      "3        Success  \n",
+      "4        Success  \n",
+      "5        Success  \n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaned_df = df_data.dropna()\n",
+    "print(cleaned_df.head())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "*All the rows with NaN-values have been dropped. There were only NaN values in the price column.*"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
