total spent by organisation on missions

--- a/SpaceMissionsAnalysis.ipynb
+++ b/SpaceMissionsAnalysis.ipynb
@@ -7438,27 +7438,30 @@
    "metadata": {
     "id": "IaJYxwEVpKHy"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "cleaned_df.groupby('Organisation').sum('Price').sort_values(by='Price', ascending=False)"
+   ],
+   "execution_count": 111,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                    Price\nOrganisation             \nNASA            76,280.00\nArianespace     16,345.00\nULA             14,798.00\nRVSN USSR       10,000.00\nCASC             6,340.26\nSpaceX           5,444.00\nNorthrop         3,930.00\nMHI              3,532.50\nISRO             2,177.00\nUS Air Force     1,550.92\nVKS RF           1,548.90\nILS              1,320.00\nBoeing           1,241.00\nRoscosmos        1,187.50\nMartin Marietta    721.40\nKosmotras          638.00\nEurockot           543.40\nLockheed           280.00\nJAXA               168.00\nRocket Lab          97.50\nESA                 37.00\nExPace              28.30\nEER                 20.00\nSandia              15.00\nVirgin Orbit        12.00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Price</th>\n    </tr>\n    <tr>\n      <th>Organisation</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>NASA</th>\n      <td>76,280.00</td>\n    </tr>\n    <tr>\n      <th>Arianespace</th>\n      <td>16,345.00</td>\n    </tr>\n    <tr>\n      <th>ULA</th>\n      <td>14,798.00</td>\n    </tr>\n    <tr>\n      <th>RVSN USSR</th>\n      <td>10,000.00</td>\n    </tr>\n    <tr>\n      <th>CASC</th>\n      <td>6,340.26</td>\n    </tr>\n    <tr>\n      <th>SpaceX</th>\n      <td>5,444.00</td>\n    </tr>\n    <tr>\n      <th>Northrop</th>\n      <td>3,930.00</td>\n    </tr>\n    <tr>\n      <th>MHI</th>\n      <td>3,532.50</td>\n    </tr>\n    <tr>\n      <th>ISRO</th>\n      <td>2,177.00</td>\n    </tr>\n    <tr>\n      <th>US Air Force</th>\n      <td>1,550.92</td>\n    </tr>\n    <tr>\n      <th>VKS RF</th>\n      <td>1,548.90</td>\n    </tr>\n    <tr>\n      <th>ILS</th>\n      <td>1,320.00</td>\n    </tr>\n    <tr>\n      <th>Boeing</th>\n      <td>1,241.00</td>\n    </tr>\n    <tr>\n      <th>Roscosmos</th>\n      <td>1,187.50</td>\n    </tr>\n    <tr>\n      <th>Martin Marietta</th>\n      <td>721.40</td>\n    </tr>\n    <tr>\n      <th>Kosmotras</th>\n      <td>638.00</td>\n    </tr>\n    <tr>\n      <th>Eurockot</th>\n      <td>543.40</td>\n    </tr>\n    <tr>\n      <th>Lockheed</th>\n      <td>280.00</td>\n    </tr>\n    <tr>\n      <th>JAXA</th>\n      <td>168.00</td>\n    </tr>\n    <tr>\n      <th>Rocket Lab</th>\n      <td>97.50</td>\n    </tr>\n    <tr>\n      <th>ESA</th>\n      <td>37.00</td>\n    </tr>\n    <tr>\n      <th>ExPace</th>\n      <td>28.30</td>\n    </tr>\n    <tr>\n      <th>EER</th>\n      <td>20.00</td>\n    </tr>\n    <tr>\n      <th>Sandia</th>\n      <td>15.00</td>\n    </tr>\n    <tr>\n      <th>Virgin Orbit</th>\n      <td>12.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": [
+    "*This result is not very representative because there are so many missing values*"
+   ],
    "metadata": {
-    "id": "orIFf-appPDL"
-   },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "86OMPfpEpO7R"
-   },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
