--- a/SpaceMissionsAnalysis.ipynb
+++ b/SpaceMissionsAnalysis.ipynb
@@ -171,6 +171,26 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "Displaying float variables:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [],
+   "source": [
+    "pd.options.display.float_format = '{:,.2f}'.format"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "jAnMiVcVjuKB"
    },
@@ -435,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -443,77 +463,49 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 964 entries, 0 to 4020\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column          Non-Null Count  Dtype              \n",
       "---  ------          --------------  -----              \n",
       " 0   Organisation    964 non-null    object             \n",
       " 1   Location        964 non-null    object             \n",
-      " 2   Date            964 non-null    datetime64[ns, UTC]\n",
-      " 3   Detail          964 non-null    object             \n",
-      " 4   Rocket_Status   964 non-null    object             \n",
-      " 5   Price           964 non-null    float64            \n",
-      " 6   Mission_Status  964 non-null    object             \n",
-      "dtypes: datetime64[ns, UTC](1), float64(1), object(5)\n",
-      "memory usage: 60.2+ KB\n",
-      "None\n"
+      " 2   ISO3            964 non-null    object             \n",
+      " 3   Date            964 non-null    datetime64[ns, UTC]\n",
+      " 4   Detail          964 non-null    object             \n",
+      " 5   Rocket_Status   964 non-null    object             \n",
+      " 6   Price           964 non-null    float64            \n",
+      " 7   Mission_Status  964 non-null    object             \n",
+      "dtypes: datetime64[ns, UTC](1), float64(1), object(6)\n",
+      "memory usage: 67.8+ KB\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_46833/2976452355.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_df.drop(columns=['Unnamed: 0.1', 'Unnamed: 0'], inplace=True)\n",
-      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_46833/2976452355.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_64566/3294365293.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_df.Date = pd.to_datetime(cleaned_df.Date, utc=True)\n",
-      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_46833/2976452355.py:10: SettingWithCopyWarning: \n",
+      "  df_data_price.Price = df_data_price.Price.astype(str).str.replace(',', '')\n",
+      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_64566/3294365293.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_df.Price = cleaned_df.Price.astype(str).str.replace(',', '')\n",
-      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_46833/2976452355.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_df.Price = pd.to_numeric(cleaned_df.Price)\n",
-      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_46833/2976452355.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_df.Location = country\n"
+      "  df_data_price.Price = pd.to_numeric(df_data_price.Price)\n"
      ]
     }
    ],
    "source": [
-    "cleaned_df = df_data.dropna()\n",
+    "# drop the NaN rows\n",
+    "df_data_price = df_data.dropna()\n",
     "\n",
-    "# drop the first two columns\n",
-    "cleaned_df.drop(columns=['Unnamed: 0.1', 'Unnamed: 0'], inplace=True)\n",
+    "# check the format of the numbers and convert them to float variables\n",
+    "df_data_price.Price = df_data_price.Price.astype(str).str.replace(',', '')\n",
+    "df_data_price.Price = pd.to_numeric(df_data_price.Price)\n",
     "\n",
-    "# convert Date to datetime\n",
-    "cleaned_df.Date = pd.to_datetime(cleaned_df.Date, utc=True)\n",
-    "\n",
-    "# convert Price to numeric\n",
-    "cleaned_df.Price = cleaned_df.Price.astype(str).str.replace(',', '')\n",
-    "cleaned_df.Price = pd.to_numeric(cleaned_df.Price)\n",
-    "\n",
-    "# get the country as location\n",
-    "country = []\n",
-    "for row in cleaned_df.Location.astype(str).str.split(','):\n",
-    "    country.append(row[-1])\n",
-    "cleaned_df.Location = country\n",
-    "\n",
-    "print(cleaned_df.info())"
+    "df_data_price.info()"
    ],
    "metadata": {
     "collapsed": false
@@ -542,20 +534,49 @@
     "id": "Fh1-libjkJIK"
    },
    "source": [
-    "cleaned_df.describe()"
+    "df_data.describe()"
    ],
-   "execution_count": 12,
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/02/fzh7rm1909q5tqfhd0ymh5hr0000gn/T/ipykernel_64566/989656468.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "  df_data.describe()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "       Organisation                                    Location  ISO3  \\\ncount          4323                                        4323  4323   \nunique           55                                         136    15   \ntop       RVSN USSR  Site 31/6, Baikonur Cosmodrome, Kazakhstan   RUS   \nfreq           1777                                         235  1398   \nfirst           NaN                                         NaN   NaN   \nlast            NaN                                         NaN   NaN   \n\n                             Date                               Detail  \\\ncount                        4323                                 4323   \nunique                       4318                                 4277   \ntop     2008-11-05 00:15:00+00:00  Cosmos-3MRB (65MRB) | BOR-5 Shuttle   \nfreq                            2                                    6   \nfirst   1957-10-04 19:28:00+00:00                                  NaN   \nlast    2020-08-07 05:12:00+00:00                                  NaN   \n\n        Rocket_Status  Price Mission_Status  \ncount            4323    964           4323  \nunique              2     56              4  \ntop     StatusRetired  450.0        Success  \nfreq             3534    136           3878  \nfirst             NaN    NaN            NaN  \nlast              NaN    NaN            NaN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Organisation</th>\n      <th>Location</th>\n      <th>ISO3</th>\n      <th>Date</th>\n      <th>Detail</th>\n      <th>Rocket_Status</th>\n      <th>Price</th>\n      <th>Mission_Status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>4323</td>\n      <td>4323</td>\n      <td>4323</td>\n      <td>4323</td>\n      <td>4323</td>\n      <td>4323</td>\n      <td>964</td>\n      <td>4323</td>\n    </tr>\n    <tr>\n      <th>unique</th>\n      <td>55</td>\n      <td>136</td>\n      <td>15</td>\n      <td>4318</td>\n      <td>4277</td>\n      <td>2</td>\n      <td>56</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>top</th>\n      <td>RVSN USSR</td>\n      <td>Site 31/6, Baikonur Cosmodrome, Kazakhstan</td>\n      <td>RUS</td>\n      <td>2008-11-05 00:15:00+00:00</td>\n      <td>Cosmos-3MRB (65MRB) | BOR-5 Shuttle</td>\n      <td>StatusRetired</td>\n      <td>450.0</td>\n      <td>Success</td>\n    </tr>\n    <tr>\n      <th>freq</th>\n      <td>1777</td>\n      <td>235</td>\n      <td>1398</td>\n      <td>2</td>\n      <td>6</td>\n      <td>3534</td>\n      <td>136</td>\n      <td>3878</td>\n    </tr>\n    <tr>\n      <th>first</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1957-10-04 19:28:00+00:00</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>last</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2020-08-07 05:12:00+00:00</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
       "text/plain": "         Price\ncount   964.00\nmean    153.79\nstd     288.45\nmin       5.30\n25%      40.00\n50%      62.00\n75%     164.00\nmax   5,000.00",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>964.00</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>153.79</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>288.45</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>5.30</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>40.00</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>62.00</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>164.00</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>5,000.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
-   ]
+   ],
+   "source": [
+    "df_data_price.describe()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
